--- a/fmdb.nuspec
+++ b/fmdb.nuspec
@@ -3,13 +3,13 @@
     <metadata>
         <!-- Required elements-->
         <id>Naxam.FMDB.iOS</id>
-        <version>2.7.2</version>
+        <version>2.7.2.1</version>
         <description>Xamarin Binding Library - FMDB</description>
         <authors>Vu Duc Tuyen</authors>
         <owners>NAXAM CO.,LTD</owners>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <title>Naxam - FMDB</title>
-        <releaseNotes>FMDB 2.7.2</releaseNotes>
+        <releaseNotes>FMDB 2.7.2/Fix issue with IsVariadic agurment</releaseNotes>
         <summary>Xamarin Binding Library - FMDB</summary>
         <licenseUrl>https://opensource.org/licenses/MIT</licenseUrl>
         <projectUrl>https://github.com/NAXAM/fmdb-ios-binding</projectUrl>
